--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Babel Farma</title>
+    <title>BabelFarma</title>
+    <meta name = "author" content="TF-BabelFarma">
+    <meta name = " description" content="BabelFarma Official Landing Page">
+    <meta name = "keyword" content="Mobile Apps, Web Development, BabelFarma">
+    <link rel = "stylesheet" href="css/styles.css">
 </head>
 <body>
-
+    <header>
+        <a href="#">Logo</a>
+        <ul>
+            <li><a href="#">Conocenos</a></li>
+            <li><a href="#">Beneficios</a></li>
+            <li><a href="#">Quiero ser un usuario</a></li>
+        </ul>
+    </header>
 </body>
 </html>
