--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <title>BabelFarma</title>
     <meta name = "author" content="TF-BabelFarma">
-    <meta name = " description" content="BabelFarma Official Landing Page">
+    <meta name = "description" content="BabelFarma Official Landing Page">
     <meta name = "keyword" content="Mobile Apps, Web Development, BabelFarma">
     <link rel = "stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <a href="#">Logo</a>
+        <a href="#">BabelFarma</a>
         <ul>
             <li><a href="#">Conocenos</a></li>
             <li><a href="#">Beneficios</a></li>
             <li><a href="#">Quiero ser un usuario</a></li>
         </ul>
     </header>
+    <section>
+        <img src="img/fondo1.png" id="fondo1">
+        <h2 id="text">BABELFARMA es una aplicación relacionada a la compra y venta de medicamentos</h2>
+    </section>
 </body>
 </html>
