Casaverde Diego - Borders, boxDash, section2, background

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
+
+
 <head>
     <meta charset="UTF-8">
     <title>BabelFarma</title>
@@ -8,7 +10,10 @@
     <meta name = "keyword" content="Mobile Apps, Web Development, BabelFarma">
     <link rel = "stylesheet" href="css/styles.css">
 </head>
+
+
 <body>
+
     <header>
         <a href="#">BabelFarma</a>
         <ul>
@@ -17,9 +22,38 @@
             <li><a href="#">Quiero ser un usuario</a></li>
         </ul>
     </header>
+
     <section>
         <img src="img/fondo1.png" id="fondo1">
+
         <h2 id="text">BABELFARMA es una aplicación relacionada a la compra y venta de medicamentos</h2>
+
+        <positionBoton>
+            Empieza Aquí
+        </positionBoton>
+
+        <positionEnvio>
+            Envio<br><br>
+            -Podrás solicitar tus medicamentos<br>
+            y recibirlo en la puerta de tu casa<br>
+            gracias a nuestro servicio de<br>
+            delivery.
+        </positionEnvio>
+
+        <positionRecojo>
+            Recojo<br><br>
+            -Realiza tus compras en la farmacia<br>
+            de tu preferencia y recojelas ahí<br>
+            mismo<br>
+            <br>
+        </positionRecojo>
     </section>
+
+
+    <section2>
+        <h2 id="text2">¿Comó comprar o vender medicamentos?</h2>
+    </section2>
 </body>
 </html>
+
+
