Casaverde Diego - Borders, boxDash, section2, background

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
     <section2>
-        <h2 id="text2">¿Comó comprar o vender medicamentos?</h2>
+        <h2 id="text2">¿Comó comprar o vender medicamentos? aaaaaa</h2>
     </section2>
 </body>
 </html>
