--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
 
     <header>
-        <a href="#">BabelFarma</a>
+        <a href="*">BabelFarma</a>
         <ul>
-            <li><a href="#">Conocenos</a></li>
-            <li><a href="#">Beneficios</a></li>
-            <li><a href="#">Quiero ser un usuario</a></li>
+            <li><a href="*">Conocenos</a></li>
+            <li><a href="*">Beneficios</a></li>
+            <li><a href="*">Quiero ser un usuario</a></li>
         </ul>
     </header>
 
