Pricila Lucero SECCION3

--- a/index.html
+++ b/index.html
@@ -83,6 +83,33 @@
         </diagrama5>
 
     </section2>
+    <section3>
+
+        <h4 id="text4">Todo acerca de nuestra aplicación </h4> <br>
+
+        <h5 id="text5">En esta aplicación podras realizar lo siguiente </h5> <br>
+
+        <diagrama6>
+
+            <p>COMPRADOR <br>
+                -Podrás acceder al catálogo<br>
+                completo  de  medicamentos <br>
+                disponibles<br>
+                -Podrás recoje tus productos<br>
+                comprados en la farmacia o <br>
+                domicilio<br>
+            </p>
+        </diagrama6>
+        <diagrama7>
+            <p>DUEÑO DE FARMACIA<br>
+                -Podrás ofrecer los medicamentos<br>
+                que esten  disponibles  en  tu <br>
+                farmacia<br>
+                -Podrás  realizar tus  ventas <br>
+                mediante la aplicacion<br>
+            </p>
+        </diagrama7>
+    </section3>
 
 
 
