correcion 3era parte

--- a/index.html
+++ b/index.html
@@ -92,21 +92,20 @@
         <diagrama6>
 
             <p>COMPRADOR <br>
-                -Podrás acceder al catálogo<br>
-                completo  de  medicamentos <br>
-                disponibles<br>
-                -Podrás recoje tus productos<br>
-                comprados en la farmacia o <br>
-                domicilio<br>
+                -Podrás acceder al catálogo completo<br>
+                &nbsp&nbsp;de  medicamentos disponibles<br>
+                -Podrás recoje tus productos  <br>
+                &nbsp&nbsp;comprados en la farmacia o <br>
+                &nbsp&nbsp;domicilio<br>
             </p>
         </diagrama6>
         <diagrama7>
             <p>DUEÑO DE FARMACIA<br>
-                -Podrás ofrecer los medicamentos<br>
-                que esten  disponibles  en  tu <br>
-                farmacia<br>
+                -Podrás ofrecer los medicamentos que<br>
+                &nbsp&nbsp;disponibles  en  tu <br>
+                &nbsp&nbsp;farmacia<br>
                 -Podrás  realizar tus  ventas <br>
-                mediante la aplicacion<br>
+                &nbsp&nbsp;mediante la aplicacion<br>
             </p>
         </diagrama7>
     </section3>
