correcion 3era parte v2

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         <positionEnvio>
             Envio<br><br>
             -Podrás solicitar tus medicamentos<br>
-            y recibirlo en la puerta de tu casa<br>
-            gracias a nuestro servicio de<br>
-            delivery.
+            &nbsp&nbsp;y recibirlo en la puerta de tu casa<br>
+            &nbsp&nbsp;gracias a nuestro servicio de<br>
+            &nbsp&nbsp;delivery.
         </positionEnvio>
 
         <positionRecojo>
             Recojo<br><br>
             -Realiza tus compras en la farmacia<br>
-            de tu preferencia y recojelas ahí<br>
-            mismo<br>
+            &nbsp&nbsp;de tu preferencia y recojelas ahí<br>
+            &nbsp&nbsp;mismo<br>
             <br>
         </positionRecojo>
     </section>
