--- a/index.html
+++ b/index.html
@@ -55,32 +55,7 @@
 
         <h3 id="text3">Para poder usar la plataforma debes realizar los siguientes pasos:</h3>
 
-        <diagrama1>
-            <p>Regístrate como</p>
-        </diagrama1>
-
-        <diagrama2>
-            <p>Comprador</p>
-        </diagrama2>
-
-        <diagrama3>
-           <p>Dueño de farmacia</p>
-        </diagrama3>
-
-        <diagrama4>
-            <p>Selecciona el <br>
-                producto, tipo de <br>
-                envio y paga.
-            </p>
-        </diagrama4>
-
-        <diagrama5>
-            <p>Vende los<br>
-                medicamentos que<br>
-                ofreces en tu <br>
-                farmacia.
-            </p>
-        </diagrama5>
+        <img src="img/diagrama.png" id="img1">
 
     </section2>
     <section3>
