Luis Diego Barja Section 4

--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
             <br>
         </positionRecojo>
     </section>
-
-
     <section2>
         <h2 id="text2">¿Comó comprar o vender medicamentos? </h2> <br>
 
@@ -84,10 +82,44 @@
             </p>
         </diagrama7>
     </section3>
-
-
-
-
+    <section4>
+        <h4 id="text6">¿Qué te ofrecemos?</h4>
+        <br>
+        <diagrama8>
+            <p>
+            <h4>Asistente Médico Virtual</h4> <br>
+                Contamos con un médico <br>
+                virtual que asesorará a los <br>
+                usuarios a identificar sus <br>
+                síntomas. <br>
+            </p>
+        </diagrama8>
+        <diagrama9>
+            <p>
+                <h4>Descuento</h4> <br>
+                Para la primera compra de los <br>
+                nuevos usuarios se les <br>
+                ofrecerá un 30% de descuento. <br>
+            </p>
+        </diagrama9>
+        <diagrama10>
+            <p>
+                <h4>Medicamentos</h4> <br>
+                Tenemos cientos de <br>
+                medicamentos disponibles <br>
+                para su compra inmediata. <br>
+            </p>
+        </diagrama10>
+        <diagrama11>
+            <p>
+                <h4>Cobertura</h4> <br>
+                Encontrarás cientos de <br>
+                farmacias que ofrezcan <br>
+                sus producos en nuestra <br>
+                aplicación. <br>
+            </p>
+        </diagrama11>
+    </section4>
 </body>
 </html>
 
