Correcion 1era y a media 2da

--- a/index.html
+++ b/index.html
@@ -8,117 +8,65 @@
     <meta name= "author" content="TF-BabelFarma">
     <meta name = "description" content="BabelFarma Official Landing Page">
     <meta name = "keyword" content="Mobile Apps, Web Development, BabelFarma">
-    <link rel = "stylesheet" href="css/styles.css">
+    <link rel = "stylesheet" href="public/assets/styles/styles.css">
+    <link rel = "shortcun icon" href="public/assets/imagenes/favicon.ico" type="image/x-icon">
 </head>
+    <header class="hero">
+        <nav class="nav container">
+            <div class="nav_logo"><!-- LOGO -->
+                <h2 class="nav_tittle">BABELFARMA</h2>
+            </div>
 
+            <ul class="nav__link nav__link--menu">
+                <li class="nav__items">
+                    <a href="#" class="nav__links">INICIO</a>
+                </li>
+                <li class="nav__items">
+                    <a href="#" class="nav__links">¿COMO FUNCIONA?</a>
+                </li>
+                <li class="nav__items">
+                    <a href="#" class="nav__links">ACERCA DE NOSOTROS</a>
+                </li>
+                <li class="nav__items">
+                    <a href="#" class="nav__links">BENEFICIOS</a>
+                </li>
+                <!-- EL PATA PUSO IMAGEN ACA -->
+            </ul>
 
-<body>
+            <div class="nav__menu">
+                <img src="./public/assets/imagenes/menu.svg" class="nav__img">
+            </div>
+        </nav>
 
-    <header>
-        <a href="*">BabelFarma</a>
-        <ul>
-            <li><a href="*">Conocenos</a></li>
-            <li><a href="*">Beneficios</a></li>
-            <li><a href="*">Quiero ser un usuario</a></li>
-        </ul>
+        <section class="hero__container container">
+            <h1 class="hero__title">BABELFARMA es una aplicación relacionada a la compra y venta de medicamentos</h1>
+            <a href="#" class="cta">Empieza aquí</a>
+        </section>
+
     </header>
 
-    <section>
-        <img src="img/fondo1.png" id="fondo1">
+    <main>
+        <section class="container function">
+            <h2 class="subtitle">¿Cómo funciona?</h2>
+            <div class="about__function">
+                <article class="function__icons">
+                    <img src="./public/assets/imagenes/envios.svg" class="about_icon">
+                    <h3 class="function_title">ENVIO</h3>
+                    <p class="function__paragraph">Podrás solicitar tus medicamentos y recibirlos
+                    en la puerta de tu casa gracias a nuestro servicio de delivery</p>
+                </article>
+                <article class="function__icons">
+                    <img src="./public/assets/imagenes/farmacia.svg" class="about_icon">
+                    <h3 class="function_title">RECOJO</h3>
+                    <p class="function__paragraph">Realiza tus compras en la farmacia de tu preferencia
+                    y recógelas ahi mismo</p>
+                </article>
+            </div>
+            <img src="./public/assets/imagenes/diagrama.png" class="about_diagrama">
+        </section>
+    </main>
+<body>
 
-        <h2 id="text">BABELFARMA es una aplicación relacionada a la compra y venta de medicamentos</h2>
-
-        <positionBoton>
-            Empieza Aquí
-        </positionBoton>
-
-        <positionEnvio>
-            Envio<br><br>
-            -Podrás solicitar tus medicamentos<br>
-            &nbsp&nbsp;y recibirlo en la puerta de tu casa<br>
-            &nbsp&nbsp;gracias a nuestro servicio de<br>
-            &nbsp&nbsp;delivery.
-        </positionEnvio>
-
-        <positionRecojo>
-            Recojo<br><br>
-            -Realiza tus compras en la farmacia<br>
-            &nbsp&nbsp;de tu preferencia y recojelas ahí<br>
-            &nbsp&nbsp;mismo<br>
-            <br>
-        </positionRecojo>
-    </section>
-    <section2>
-        <h2 id="text2">¿Comó comprar o vender medicamentos? </h2> <br>
-
-        <h3 id="text3">Para poder usar la plataforma debes realizar los siguientes pasos:</h3>
-
-        <img src="img/diagrama.png" id="img1">
-
-    </section2>
-    <section3>
-
-        <h4 id="text4">Todo acerca de nuestra aplicación </h4> <br>
-
-        <h5 id="text5">En esta aplicación podras realizar lo siguiente </h5> <br>
-
-        <diagrama6>
-
-            <p>COMPRADOR <br>
-                -Podrás acceder al catálogo completo<br>
-                &nbsp&nbsp;de  medicamentos disponibles<br>
-                -Podrás recoje tus productos  <br>
-                &nbsp&nbsp;comprados en la farmacia o <br>
-                &nbsp&nbsp;domicilio<br>
-            </p>
-        </diagrama6>
-        <diagrama7>
-            <p>DUEÑO DE FARMACIA<br>
-                -Podrás ofrecer los medicamentos que<br>
-                &nbsp&nbsp;disponibles  en  tu <br>
-                &nbsp&nbsp;farmacia<br>
-                -Podrás  realizar tus  ventas <br>
-                &nbsp&nbsp;mediante la aplicacion<br>
-            </p>
-        </diagrama7>
-    </section3>
-    <section4>
-        <h4 id="text6">¿Qué te ofrecemos?</h4>
-        <diagrama8>
-            <p>
-            <h4>Asistente Médico Virtual</h4> <br>
-                Contamos con un médico <br>
-                virtual que asesorará a los <br>
-                usuarios a identificar sus <br>
-                síntomas. <br>
-            </p>
-        </diagrama8>
-        <diagrama9>
-            <p>
-                <h4>Descuento</h4> <br>
-                Para la primera compra de los <br>
-                nuevos usuarios se les <br>
-                ofrecerá un 30% de descuento. <br>
-            </p>
-        </diagrama9>
-        <diagrama10>
-            <p>
-                <h4>Medicamentos</h4> <br>
-                Tenemos cientos de <br>
-                medicamentos disponibles <br>
-                para su compra inmediata. <br>
-            </p>
-        </diagrama10>
-        <diagrama11>
-            <p>
-                <h4>Cobertura</h4> <br>
-                Encontrarás cientos de <br>
-                farmacias que ofrezcan <br>
-                sus producos en nuestra <br>
-                aplicación. <br>
-            </p>
-        </diagrama11>
-    </section4>
 </body>
 </html>
 
