modificacion de la 3era con 3da

--- a/index.html
+++ b/index.html
@@ -45,24 +45,49 @@
 
     </header>
 
-    <main>
+    <main class="funciones">
         <section class="container function">
             <h2 class="subtitle">¿Cómo funciona?</h2>
             <div class="about__function">
                 <article class="function__icons">
                     <img src="./public/assets/imagenes/envios.svg" class="about_icon">
-                    <h3 class="function_title">ENVIO</h3>
+                    <h3 class="function_title">COMPRADOR</h3>
                     <p class="function__paragraph">Podrás solicitar tus medicamentos y recibirlos
                     en la puerta de tu casa gracias a nuestro servicio de delivery</p>
                 </article>
                 <article class="function__icons">
                     <img src="./public/assets/imagenes/farmacia.svg" class="about_icon">
-                    <h3 class="function_title">RECOJO</h3>
+                    <h3 class="function_title">DUEÑO DE FARMACIA</h3>
                     <p class="function__paragraph">Realiza tus compras en la farmacia de tu preferencia
                     y recógelas ahi mismo</p>
                 </article>
             </div>
-            <img src="./public/assets/imagenes/diagrama.png" class="about_diagrama">
+            <section class="function__container container">
+                <h2 class="texto">Para poder utilizar la plataforma debe seguir los siguientes pasos:</h2>
+                <img src="./public/assets/imagenes/diagrama.png" class="about_diagrama">
+                <a href="#" class="cta">Registrate ahora</a>
+            </section>
+        </section>
+    </main>
+
+
+    <main class="nosotros">
+        <section class="container nosotros">
+            <h2 class="subtitle">ACERCA DE NOSOTROS</h2>
+            <div class="about__nosotros">
+                <article class="nosotros__icons">
+                    <img src="./public/assets/imagenes/comprador.svg" class="about_icon">
+                    <h3 class="function_title">ENVIO</h3>
+                    <p class="function__paragraph">-Podrás acceder al cátalago completo de medicamentos disponibles.<br>
+                    -Podrás recojer tus productos comprados en la farmacia o en tu domicilio</p>
+                </article>
+                <article class="nosotros__icons">
+                    <img src="./public/assets/imagenes/dueño_farmacia.svg" class="about_icon">
+                    <h3 class="nosotros_title">RECOJO</h3>
+                    <p class="nosotros__paragraph">Realiza tus compras en la farmacia de tu preferencia
+                        y recógelas ahi mismo</p>
+                </article>
+            </div>
         </section>
     </main>
 <body>
