avance 3era seccion

--- a/index.html
+++ b/index.html
@@ -50,22 +50,34 @@
             <h2 class="subtitle">¿Cómo funciona?</h2>
             <div class="about__function">
                 <article class="function__icons">
-                    <img src="./public/assets/imagenes/envios.svg" class="about_icon">
+                    <img src="./public/assets/imagenes/envios.svg" class="about_icon1">
                     <h3 class="function_title">COMPRADOR</h3>
                     <p class="function__paragraph">Podrás solicitar tus medicamentos y recibirlos
-                    en la puerta de tu casa gracias a nuestro servicio de delivery</p>
+                    en la puerta de tu casa gracias a nuestro servicio de delivery.</p>
                 </article>
                 <article class="function__icons">
-                    <img src="./public/assets/imagenes/farmacia.svg" class="about_icon">
-                    <h3 class="function_title">DUEÑO DE FARMACIA</h3>
+                    <img src="./public/assets/imagenes/comprador.svg" class="about_icon2">
+                    <h3>ENVIO</h3>
+                    <p class="function__paragraph">- Podrás acceder al catálago completo de medicamentos disponibles.<br>
+                        - Podrás recoger tus productos comprados en la farmacia o en tu domicilio.</p>
+                </article>
+                <article class="function__icons">
+                    <img src="./public/assets/imagenes/dueño_farmacia.svg" class="about_icon3">
+                    <h3>RECOJO</h3>
+                    <p class="function__paragraph">- Podrás ofrecerlos medicamentos que esten disponibles en tu farmacia.<br>
+                    - Podrás realizar tus ventas mediante la aplicación.</p>
+                </article>
+                <article class="function__icons">
+                    <img src="./public/assets/imagenes/farmacia.svg" class="about_icon4">
+                    <h3>DUEÑO DE FARMACIA</h3>
                     <p class="function__paragraph">Realiza tus compras en la farmacia de tu preferencia
-                    y recógelas ahi mismo</p>
+                    y recógelas ahi mismo.</p>
                 </article>
             </div>
             <section class="function__container container">
-                <h2 class="texto">Para poder utilizar la plataforma debe seguir los siguientes pasos:</h2>
+                <h2 class="texto2">Para poder utilizar la plataforma debe seguir los siguientes pasos:</h2>
                 <img src="./public/assets/imagenes/diagrama.png" class="about_diagrama">
-                <a href="#" class="cta">Registrate ahora</a>
+                <a href="#" class="cta2">Registrate ahora</a>
             </section>
         </section>
     </main>
@@ -74,18 +86,32 @@
     <main class="nosotros">
         <section class="container nosotros">
             <h2 class="subtitle">ACERCA DE NOSOTROS</h2>
+            <h2 class="texto2">Integrantes del Startup</h2>
             <div class="about__nosotros">
-                <article class="nosotros__icons">
-                    <img src="./public/assets/imagenes/comprador.svg" class="about_icon">
-                    <h3 class="function_title">ENVIO</h3>
-                    <p class="function__paragraph">-Podrás acceder al cátalago completo de medicamentos disponibles.<br>
-                    -Podrás recojer tus productos comprados en la farmacia o en tu domicilio</p>
+                <article class="cuadro_integrante">
+                    <img alt="Foto de Jeremy Alcala" src="./public/assets/imagenes/jeremy.PNG" class="imagen_nosotros">
+                    <h4 class="nosotros__nombre">Jeremy Alcala Ocxas</h4>
+                    <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
                 </article>
-                <article class="nosotros__icons">
-                    <img src="./public/assets/imagenes/dueño_farmacia.svg" class="about_icon">
-                    <h3 class="nosotros_title">RECOJO</h3>
-                    <p class="nosotros__paragraph">Realiza tus compras en la farmacia de tu preferencia
-                        y recógelas ahi mismo</p>
+                <article class="cuadro_integrante">
+                    <img alt="Foto de Jeremy Alcala" src="./public/assets/imagenes/luis.PNG" class="imagen_nosotros">
+                    <h4 class="nosotros__nombre">Luis Alvarez Ticona</h4>
+                    <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
+                </article>
+                <article class="cuadro_integrante">
+                    <img alt="Foto de Jeremy Alcala" src="./public/assets/imagenes/barja.PNG" class="imagen_nosotros">
+                    <h4 class="nosotros__nombre">Luis Barja Estrada</h4>
+                    <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
+                </article>
+                <article class="cuadro_integrante">
+                    <img alt="Foto de Jeremy Alcala" src="./public/assets/imagenes/casaverde.PNG" class="imagen_nosotros">
+                    <h4 class="nosotros__nombre">Diego Casaverde Centeno</h4>
+                    <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
+                </article>
+                <article class="cuadro_integrante">
+                    <img alt="Foto de Jeremy Alcala" src="./public/assets/imagenes/pricila.PNG" class="imagen_nosotros">
+                    <h4 class="nosotros__nombre">Pricila Lucero Lucero</h4>
+                    <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
                 </article>
             </div>
         </section>
