--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav_logo"><!-- LOGO -->
-                <h2 class="nav_tittle">BABELFARMA</h2>
+                <a><img class="img-logo" src="./public/assets/imagenes/logo.png"></a>
             </div>
 
             <ul class="nav__link nav__link--menu">
@@ -28,7 +28,7 @@
                     <a href="#" class="nav__links">ACERCA DE NOSOTROS</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">BENEFICIOS</a>
+                    <a href="#" class="nav__links">¿QUE OFRECEMOS?</a>
                 </li>
                 <!-- EL PATA PUSO IMAGEN ACA -->
             </ul>
@@ -44,7 +44,7 @@
         </section>
 
     </header>
-
+<body>
     <main class="funciones">
         <section class="container function">
             <h2 class="subtitle">¿Cómo funciona?</h2>
@@ -114,9 +114,74 @@
                     <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
                 </article>
             </div>
+
+        </section>
+        <section  align="center">
+            <div>
+                <h2 class="texto2">Video about the team <br></h2>
+                <iframe width="1100" height="650" src="https://www.youtube.com/embed/L62KHKXkVKw"
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section  align="center">
+            <div>
+                <h2 class="texto2">Video about the product <br></h2>
+                <iframe width="1100" height="650" src="https://www.youtube.com/embed/L62KHKXkVKw"
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <h2><br></h2>
         </section>
     </main>
-<body>
+
+
+    <main class="ofrecemos">
+        <section class="container ofrecemos">
+            <h2 class="subtitle">¿QUE OFRECEMOS?</h2>
+            <div class="about__nosotros">
+                <article class="cuadro_ofrecemos">
+                    <img alt="Imagen de asistente medico virtual" src="./public/assets/imagenes/asistente.svg" class="imagen_ofrecemos">
+                    <h2 class="nosotros_title">Asistente médico virtual</h2>
+                    <h4 class="function__paragraph"><em>Contamos con un asistente médico virtual que asesorará a los usuarios para poder
+                        identificar sus síntomas</em></h4>
+                </article>
+                <article class="cuadro_ofrecemos">
+                    <img alt="Imagen de descuento" src="./public/assets/imagenes/descuento.svg" class="imagen_ofrecemos">
+                    <h2 class="nosotros_title">Descuento</h2>
+                    <h4 class="function__paragraph"><em>Para la primera compra de los nuevos usuarios se les ofrecerá un 30% de descuento.</em></h4>
+                </article>
+                <article class="cuadro_ofrecemos">
+                    <img alt="Medicamentos" src="./public/assets/imagenes/medicamentos.svg" class="imagen_ofrecemos">
+                    <h2 class="nosotros_title">Medicamentos</h2>
+                    <h4 class="function__paragraph"><em>Tenemos cientos de medicamentos disponibles para su compra inmediata.</em></h4>
+                </article>
+                <article class="cuadro_integrante">
+                    <img alt="Cobertura" src="./public/assets/imagenes/cobertura.svg" class="imagen_ofrecemos">
+                    <h2 class="nosotros_title">Cobertura</h2>
+                    <h4 class="function__paragraph"><em>Encontrarás cientos de farmacias que ofrezcan sus productos en nuestra aplicación.</em></h4>
+                </article>
+            </div>
+        </section>
+        <h2><br></h2>
+    </main>
+
+    <div class="sect-marg barfooter">
+        <div class="container footer text-white">
+            <a><img class="img-logo" src="./public/assets/imagenes/logo.png"></a>
+            <div class="terms-pol">
+                <a class="footlink">BABELFARMA OFICIAL</a>
+                <a class="footlink">·</a>
+                <a class="footlink">CONTACTENOS</a>
+                <a class="footlink">·</a>
+                <a class="footlink">POLITICAS DE PRIVACIDAD</a>
+            </div>
+            <div class="media">
+                <a><img class="social-icon" src="./public/assets/imagenes/facebook.svg" alt="Facebook"></a>
+                <a><img class="social-icon" src="./public/assets/imagenes/instagrama.svg" alt="Instagram"></a>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
