correcion de primera parte

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
 
         <section class="hero__container container">
-            <h1 class="hero__title">BABELFARMA es una aplicación relacionada a la compra y venta de medicamentos</h1>
+            <h1 class="hero__title">Lo mejor y más eficiente farmacia está en tu forma de cuidarte</h1>
             <a href="#" class="cta">Empieza aquí</a>
         </section>
 
