--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
                 <article class="function__icons">
                     <img src="./public/assets/imagenes/dueño_farmacia.svg" class="about_icon3">
                     <h3>RECOJO</h3>
-                    <p class="function__paragraph">- Podrás ofrecerlos medicamentos que esten disponibles en tu farmacia.<br>
-                    - Podrás realizar tus ventas mediante la aplicación.</p>
+                    <p class="function__paragraph">Realiza tus compras en la farmacia de tu preferencia y recógelas ahi mismo.</p>
                 </article>
                 <article class="function__icons">
                     <img src="./public/assets/imagenes/farmacia.svg" class="about_icon4">
                     <h3>DUEÑO DE FARMACIA</h3>
-                    <p class="function__paragraph">Realiza tus compras en la farmacia de tu preferencia
-                    y recógelas ahi mismo.</p>
+                    <p class="function__paragraph">- Podrás ofrecer los medicamentos que esten disponibles en tu farmacia.<br>
+                        - Podrás realizar tus ventas mediante la aplicación.</p>
                 </article>
             </div>
             <section class="function__container container">
