Versión Final del TrabajoFinal-IHC

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 
 <head>
@@ -34,8 +34,23 @@
 
         <section class="hero__container container">
             <h1 class="hero__title">Lo mejor y más eficiente farmacia está en tu forma de cuidarte</h1>
-            <a href="#" class="cta">Empieza aquí</a>
+            <input type="checkbox" id="btn-modal">
+            <br>
+            <label for="btn-modal" class="lbl-modal">Empieza aquí</label>
+            <div class="modal">
+                <div class="contenedor">
+                    <header>Bienvenidos a BabelFarma</header>
+                    <label for="btn-modal">X</label>
+                    <div class="contenido">
+                        <a class="btn-a" href="registroDueño.html">Dueño de Farmacia</a>
+                        <br>
+                        <br>
+                        <a class="btn-a" href="registroComprador.html">Comprador</a>
+                    </div>
+                </div>
+            </div>
         </section>
+
 
 </header>
 
